// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cancelOrders 1`] = `
Array [
  Array [
    "address",
    "By signing this message, your are confirming to cancel following orders (no gas cost involved): orderHash1,orderHash2",
  ],
]
`;

exports[`cancelOrders 2`] = `
Array [
  Array [
    "aETH|WETH",
    Array [
      "orderHash1",
      "orderHash2",
    ],
    "signature",
  ],
]
`;

exports[`cancelOrders 3`] = `
Object {
  "orderHash1": true,
  "orderHash2": true,
}
`;

exports[`checkAllowance, 0 allowance 1`] = `
Array [
  Array [
    "WETH",
    "address",
  ],
  Array [
    "aETH",
    "address",
  ],
  Array [
    "bETH",
    "address",
  ],
  Array [
    "WETH",
    "address",
    "custodianAddr",
  ],
]
`;

exports[`checkAllowance, 0 allowance 2`] = `
Array [
  Array [
    "WETH",
    "address",
  ],
  Array [
    "aETH",
    "address",
  ],
  Array [
    "bETH",
    "address",
  ],
  Array [
    "WETH",
    "address",
    "custodianAddr",
  ],
]
`;

exports[`checkAllowance, 0 allowance 3`] = `
Array [
  Array [
    "WETH|
	address|undefined",
  ],
  Array [
    "aETH|
	address|undefined",
  ],
  Array [
    "bETH|
	address|undefined",
  ],
  Array [
    "WETH|
	address|custodianAddr",
  ],
]
`;

exports[`checkAllowance, already approved 1`] = `
Array [
  Array [
    "WETH",
    "address",
  ],
  Array [
    "aETH",
    "address",
  ],
  Array [
    "bETH",
    "address",
  ],
  Array [
    "WETH",
    "address",
    "custodianAddr",
  ],
]
`;

exports[`createOrderBookSide ask 1`] = `
Array [
  Array [
    "address",
    "aETH|WETH",
    0.0001,
    22.5,
    false,
    1234567890000,
  ],
  Array [
    "address",
    "aETH|WETH",
    0.0002,
    22.5,
    false,
    1234567890000,
  ],
  Array [
    "address",
    "aETH|WETH",
    0.0003,
    22.5,
    false,
    1234567890000,
  ],
  Array [
    "address",
    "aETH|WETH",
    0.0004,
    22.5,
    false,
    1234567890000,
  ],
]
`;

exports[`createOrderBookSide ask 2`] = `
Object {
  "addOrderTxHash": true,
}
`;

exports[`createOrderBookSide bid 1`] = `
Array [
  Array [
    "address",
    "aETH|WETH",
    0.0001,
    22.5,
    true,
    1234567890000,
  ],
  Array [
    "address",
    "aETH|WETH",
    0,
    22.5,
    true,
    1234567890000,
  ],
  Array [
    "address",
    "aETH|WETH",
    -0.0001,
    22.5,
    true,
    1234567890000,
  ],
  Array [
    "address",
    "aETH|WETH",
    -0.0002,
    22.5,
    true,
    1234567890000,
  ],
]
`;

exports[`createOrderBookSide bid 2`] = `
Object {
  "addOrderTxHash": true,
}
`;

exports[`createOrderBookSide bid, no price adjustment 1`] = `
Array [
  Array [
    "address",
    "aETH|WETH",
    0.0001,
    22.5,
    true,
    1234567890000,
  ],
  Array [
    "address",
    "aETH|WETH",
    0.0001,
    22.5,
    true,
    1234567890000,
  ],
  Array [
    "address",
    "aETH|WETH",
    0.0001,
    22.5,
    true,
    1234567890000,
  ],
  Array [
    "address",
    "aETH|WETH",
    0.0001,
    22.5,
    true,
    1234567890000,
  ],
]
`;

exports[`createOrderBookSide bid, no price adjustment 2`] = `
Object {
  "addOrderTxHash": true,
}
`;

exports[`initialize 1`] = `
Array [
  Array [
    "aETH",
  ],
]
`;

exports[`initialize 2`] = `
Array [
  Array [
    "WETH",
    "address",
  ],
  Array [
    "aETH",
    "address",
  ],
  Array [
    "bETH",
    "address",
  ],
]
`;

exports[`initialize 3`] = `
Array [
  Array [
    "address",
  ],
]
`;

exports[`initialize, no a token 1`] = `[Error: no aToken]`;

exports[`initialize, no b token 1`] = `[Error: no bToken]`;

exports[`takeOneSideOrders ask 1`] = `
Array [
  Array [
    "address",
    "aETH|WETH",
    0.001,
    20,
    true,
    1234567890000,
  ],
  Array [
    "address",
    "aETH|WETH",
    0.0014,
    20,
    true,
    1234567890000,
  ],
]
`;

exports[`takeOneSideOrders ask 2`] = `
Object {
  "addOrderTxHash": true,
}
`;

exports[`takeOneSideOrders bid 1`] = `
Array [
  Array [
    "address",
    "aETH|WETH",
    0.001,
    20,
    false,
    1234567890000,
  ],
  Array [
    "address",
    "aETH|WETH",
    0.0014,
    20,
    false,
    1234567890000,
  ],
]
`;

exports[`takeOneSideOrders bid 2`] = `
Object {
  "addOrderTxHash": true,
}
`;
